<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment3</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_uri">Go!</string>
    <string name="text_uri">http://www.sjsu.edu</string>
    <string name="button_stock">Find!</string>
    <string name="stock_input">Stock name</string>
    <string name="stock_output">Stock value : 0.00</string>
    <string name="stock_api">http://finance.google.com/finance/info?client=ig&amp;q=NASDAQ:</string>
    <string name="sjsu">SJSU Home Page</string>
    <string name="stock_ticket_header">Stock Ticket Lookup</string>
</resources>
