<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/stockOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stockButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:text="@string/stock_output" />

    <Button
        android:id="@+id/stockButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stockInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/button_stock" />

    <Button
        android:id="@+id/goButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sjsuHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_uri" />

    <TextView
        android:id="@+id/sjsuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sjsu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/stockInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/stock_input" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/stockHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stockInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/stock_ticket_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
